[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/board.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/Board.gd" type="Script" id=4]
[ext_resource path="res://scenes/Pit.tscn" type="PackedScene" id=5]

[node name="Board" type="Node2D"]
script = ExtResource( 4 )

[node name="BoardSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="WhitePit" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 908, 567 )

[node name="BlackPit" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 908, 179 )

[node name="PitsOffset" type="Node2D" parent="."]
pause_mode = 1
physics_interpolation_mode = 1
visible = false

[node name="PitA" parent="PitsOffset" instance=ExtResource( 5 )]
position = Vector2( 812, 181 )

[node name="PitB" parent="PitsOffset" instance=ExtResource( 5 )]
position = Vector2( 378, 181 )

[node name="PitC" parent="PitsOffset" instance=ExtResource( 5 )]
position = Vector2( 68, 564 )

[node name="PitD" parent="PitsOffset" instance=ExtResource( 5 )]
position = Vector2( 502, 564 )

[node name="BarPit" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 440, 373 )
scale = Vector2( 1, 2.32 )
